plugins {
    id 'com.android.application'
}

android {
    namespace 'com.rebootinterceptor'
    compileSdk 34

    defaultConfig {
        applicationId "com.rebootinterceptor"
        minSdk 30
        targetSdk 34
        versionCode 1
        versionName "1.0"
    }

    buildTypes {
        release {
            minifyEnabled false
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    // LSPosed/Xposed API
    compileOnly 'de.robv.android.xposed:api:82'
}
